# travel

./: Cargo.toml
src/: args.rs  main.rs  manager.rs
src/commands/: add_command.rs  clear_command.rs  delete_command.rs  find_command.rs  list_command.rs  mod.rs  to_command.rs
src/dispatcher/: mod.rs  request.rs  router.rs
src/storage/: fs.rs  mod.rs  storage_map.rs
src/utils/: finder.rs  fuzzy_matcher.rs  mod.rs  printer.rs  terminal.rs  terminal_type.rs
