[package]
name = "travel"
version = "0.1.0"
authors = ["Israel Barbara <israelsilvabarbara@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strsim = "0.11.1"


